prosr.Parser/Parser/Prosr1Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Projects\hackathonblazor_prosr_adminui\prosr.Parser\Parser\Prosr1.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class Prosr1Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, SYNTAX=13, PACKAGE=14, MESSAGE=15, HUB=16, 
		ACTION=17, CALLS=18, ON=19, REPEATED=20, TYPE=21, IDENT=22, NUMBER=23, 
		WHITESPACE=24;
	public const int
		RULE_content = 0, RULE_syntax = 1, RULE_definition = 2, RULE_pkg = 3, 
		RULE_hub = 4, RULE_sending = 5, RULE_sendingMessageIdent = 6, RULE_sendingTarget = 7, 
		RULE_returning = 8, RULE_returningMessageIdent = 9, RULE_returningTarget = 10, 
		RULE_message = 11, RULE_field = 12, RULE_typeIdent = 13, RULE_quote = 14, 
		RULE_fieldIdent = 15, RULE_fullIdent = 16, RULE_hubIdent = 17, RULE_messageIdent = 18, 
		RULE_packageIdent = 19, RULE_returningIdent = 20, RULE_sendingIdent = 21;
	public static readonly string[] ruleNames = {
		"content", "syntax", "definition", "pkg", "hub", "sending", "sendingMessageIdent", 
		"sendingTarget", "returning", "returningMessageIdent", "returningTarget", 
		"message", "field", "typeIdent", "quote", "fieldIdent", "fullIdent", "hubIdent", 
		"messageIdent", "packageIdent", "returningIdent", "sendingIdent"
	};

	private static readonly string[] _LiteralNames = {
		null, "'='", "'prosr1'", "';'", "'{'", "'}'", "'('", "')'", "'caller'", 
		"'all'", "'''", "'\"'", "'.'", "'syntax'", "'package'", "'message'", "'hub'", 
		"'action'", "'calls'", "'on'", "'repeated'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "SYNTAX", "PACKAGE", "MESSAGE", "HUB", "ACTION", "CALLS", "ON", 
		"REPEATED", "TYPE", "IDENT", "NUMBER", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Prosr1.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static Prosr1Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public Prosr1Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public Prosr1Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ContentContext : ParserRuleContext {
		public SyntaxContext syntax() {
			return GetRuleContext<SyntaxContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(Prosr1Parser.Eof, 0); }
		public DefinitionContext[] definition() {
			return GetRuleContexts<DefinitionContext>();
		}
		public DefinitionContext definition(int i) {
			return GetRuleContext<DefinitionContext>(i);
		}
		public ContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_content; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterContent(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitContent(this);
		}
	}

	[RuleVersion(0)]
	public ContentContext content() {
		ContentContext _localctx = new ContentContext(Context, State);
		EnterRule(_localctx, 0, RULE_content);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44; syntax();
			State = 48;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PACKAGE) | (1L << MESSAGE) | (1L << HUB))) != 0)) {
				{
				{
				State = 45; definition();
				}
				}
				State = 50;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 51; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SyntaxContext : ParserRuleContext {
		public ITerminalNode SYNTAX() { return GetToken(Prosr1Parser.SYNTAX, 0); }
		public QuoteContext[] quote() {
			return GetRuleContexts<QuoteContext>();
		}
		public QuoteContext quote(int i) {
			return GetRuleContext<QuoteContext>(i);
		}
		public SyntaxContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_syntax; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterSyntax(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitSyntax(this);
		}
	}

	[RuleVersion(0)]
	public SyntaxContext syntax() {
		SyntaxContext _localctx = new SyntaxContext(Context, State);
		EnterRule(_localctx, 2, RULE_syntax);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53; Match(SYNTAX);
			State = 54; Match(T__0);
			State = 55; quote();
			State = 56; Match(T__1);
			State = 57; quote();
			State = 58; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefinitionContext : ParserRuleContext {
		public PkgContext pkg() {
			return GetRuleContext<PkgContext>(0);
		}
		public HubContext hub() {
			return GetRuleContext<HubContext>(0);
		}
		public MessageContext message() {
			return GetRuleContext<MessageContext>(0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_definition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitDefinition(this);
		}
	}

	[RuleVersion(0)]
	public DefinitionContext definition() {
		DefinitionContext _localctx = new DefinitionContext(Context, State);
		EnterRule(_localctx, 4, RULE_definition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case PACKAGE:
				{
				State = 60; pkg();
				}
				break;
			case HUB:
				{
				State = 61; hub();
				}
				break;
			case MESSAGE:
				{
				State = 62; message();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PkgContext : ParserRuleContext {
		public ITerminalNode PACKAGE() { return GetToken(Prosr1Parser.PACKAGE, 0); }
		public FullIdentContext fullIdent() {
			return GetRuleContext<FullIdentContext>(0);
		}
		public PkgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pkg; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterPkg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitPkg(this);
		}
	}

	[RuleVersion(0)]
	public PkgContext pkg() {
		PkgContext _localctx = new PkgContext(Context, State);
		EnterRule(_localctx, 6, RULE_pkg);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65; Match(PACKAGE);
			State = 66; fullIdent();
			State = 67; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HubContext : ParserRuleContext {
		public ITerminalNode HUB() { return GetToken(Prosr1Parser.HUB, 0); }
		public HubIdentContext hubIdent() {
			return GetRuleContext<HubIdentContext>(0);
		}
		public SendingContext[] sending() {
			return GetRuleContexts<SendingContext>();
		}
		public SendingContext sending(int i) {
			return GetRuleContext<SendingContext>(i);
		}
		public ReturningContext[] returning() {
			return GetRuleContexts<ReturningContext>();
		}
		public ReturningContext returning(int i) {
			return GetRuleContext<ReturningContext>(i);
		}
		public HubContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_hub; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterHub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitHub(this);
		}
	}

	[RuleVersion(0)]
	public HubContext hub() {
		HubContext _localctx = new HubContext(Context, State);
		EnterRule(_localctx, 8, RULE_hub);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69; Match(HUB);
			State = 70; hubIdent();
			State = 71; Match(T__3);
			State = 74;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 74;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case ACTION:
					{
					State = 72; sending();
					}
					break;
				case CALLS:
					{
					State = 73; returning();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 76;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==ACTION || _la==CALLS );
			State = 78; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SendingContext : ParserRuleContext {
		public ITerminalNode ACTION() { return GetToken(Prosr1Parser.ACTION, 0); }
		public SendingIdentContext sendingIdent() {
			return GetRuleContext<SendingIdentContext>(0);
		}
		public SendingMessageIdentContext sendingMessageIdent() {
			return GetRuleContext<SendingMessageIdentContext>(0);
		}
		public ITerminalNode CALLS() { return GetToken(Prosr1Parser.CALLS, 0); }
		public ReturningIdentContext returningIdent() {
			return GetRuleContext<ReturningIdentContext>(0);
		}
		public ReturningMessageIdentContext returningMessageIdent() {
			return GetRuleContext<ReturningMessageIdentContext>(0);
		}
		public ITerminalNode ON() { return GetToken(Prosr1Parser.ON, 0); }
		public SendingTargetContext sendingTarget() {
			return GetRuleContext<SendingTargetContext>(0);
		}
		public SendingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sending; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterSending(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitSending(this);
		}
	}

	[RuleVersion(0)]
	public SendingContext sending() {
		SendingContext _localctx = new SendingContext(Context, State);
		EnterRule(_localctx, 10, RULE_sending);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80; Match(ACTION);
			State = 81; sendingIdent();
			State = 82; Match(T__5);
			State = 83; sendingMessageIdent();
			State = 84; Match(T__6);
			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==CALLS) {
				{
				State = 85; Match(CALLS);
				State = 86; returningIdent();
				State = 87; Match(T__5);
				State = 88; returningMessageIdent();
				State = 89; Match(T__6);
				State = 90; Match(ON);
				State = 91; sendingTarget();
				}
			}

			State = 95; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SendingMessageIdentContext : ParserRuleContext {
		public MessageIdentContext messageIdent() {
			return GetRuleContext<MessageIdentContext>(0);
		}
		public SendingMessageIdentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sendingMessageIdent; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterSendingMessageIdent(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitSendingMessageIdent(this);
		}
	}

	[RuleVersion(0)]
	public SendingMessageIdentContext sendingMessageIdent() {
		SendingMessageIdentContext _localctx = new SendingMessageIdentContext(Context, State);
		EnterRule(_localctx, 12, RULE_sendingMessageIdent);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENT) {
				{
				State = 97; messageIdent();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SendingTargetContext : ParserRuleContext {
		public SendingTargetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sendingTarget; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterSendingTarget(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitSendingTarget(this);
		}
	}

	[RuleVersion(0)]
	public SendingTargetContext sendingTarget() {
		SendingTargetContext _localctx = new SendingTargetContext(Context, State);
		EnterRule(_localctx, 14, RULE_sendingTarget);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			_la = TokenStream.LA(1);
			if ( !(_la==T__7 || _la==T__8) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturningContext : ParserRuleContext {
		public ITerminalNode CALLS() { return GetToken(Prosr1Parser.CALLS, 0); }
		public ReturningIdentContext returningIdent() {
			return GetRuleContext<ReturningIdentContext>(0);
		}
		public ReturningMessageIdentContext returningMessageIdent() {
			return GetRuleContext<ReturningMessageIdentContext>(0);
		}
		public ITerminalNode ON() { return GetToken(Prosr1Parser.ON, 0); }
		public ReturningTargetContext returningTarget() {
			return GetRuleContext<ReturningTargetContext>(0);
		}
		public ReturningContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returning; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterReturning(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitReturning(this);
		}
	}

	[RuleVersion(0)]
	public ReturningContext returning() {
		ReturningContext _localctx = new ReturningContext(Context, State);
		EnterRule(_localctx, 16, RULE_returning);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102; Match(CALLS);
			State = 103; returningIdent();
			State = 104; Match(T__5);
			State = 105; returningMessageIdent();
			State = 106; Match(T__6);
			State = 107; Match(ON);
			State = 108; returningTarget();
			State = 109; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturningMessageIdentContext : ParserRuleContext {
		public MessageIdentContext messageIdent() {
			return GetRuleContext<MessageIdentContext>(0);
		}
		public ReturningMessageIdentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returningMessageIdent; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterReturningMessageIdent(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitReturningMessageIdent(this);
		}
	}

	[RuleVersion(0)]
	public ReturningMessageIdentContext returningMessageIdent() {
		ReturningMessageIdentContext _localctx = new ReturningMessageIdentContext(Context, State);
		EnterRule(_localctx, 18, RULE_returningMessageIdent);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENT) {
				{
				State = 111; messageIdent();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturningTargetContext : ParserRuleContext {
		public ReturningTargetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returningTarget; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterReturningTarget(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitReturningTarget(this);
		}
	}

	[RuleVersion(0)]
	public ReturningTargetContext returningTarget() {
		ReturningTargetContext _localctx = new ReturningTargetContext(Context, State);
		EnterRule(_localctx, 20, RULE_returningTarget);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MessageContext : ParserRuleContext {
		public ITerminalNode MESSAGE() { return GetToken(Prosr1Parser.MESSAGE, 0); }
		public MessageIdentContext messageIdent() {
			return GetRuleContext<MessageIdentContext>(0);
		}
		public FieldContext[] field() {
			return GetRuleContexts<FieldContext>();
		}
		public FieldContext field(int i) {
			return GetRuleContext<FieldContext>(i);
		}
		public MessageContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_message; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterMessage(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitMessage(this);
		}
	}

	[RuleVersion(0)]
	public MessageContext message() {
		MessageContext _localctx = new MessageContext(Context, State);
		EnterRule(_localctx, 22, RULE_message);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116; Match(MESSAGE);
			State = 117; messageIdent();
			State = 118; Match(T__3);
			State = 122;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << REPEATED) | (1L << TYPE) | (1L << IDENT))) != 0)) {
				{
				{
				State = 119; field();
				}
				}
				State = 124;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 125; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldContext : ParserRuleContext {
		public TypeIdentContext typeIdent() {
			return GetRuleContext<TypeIdentContext>(0);
		}
		public FieldIdentContext fieldIdent() {
			return GetRuleContext<FieldIdentContext>(0);
		}
		public ITerminalNode NUMBER() { return GetToken(Prosr1Parser.NUMBER, 0); }
		public ITerminalNode REPEATED() { return GetToken(Prosr1Parser.REPEATED, 0); }
		public FieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterField(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitField(this);
		}
	}

	[RuleVersion(0)]
	public FieldContext field() {
		FieldContext _localctx = new FieldContext(Context, State);
		EnterRule(_localctx, 24, RULE_field);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==REPEATED) {
				{
				State = 127; Match(REPEATED);
				}
			}

			State = 130; typeIdent();
			State = 131; fieldIdent();
			State = 132; Match(T__0);
			State = 133; Match(NUMBER);
			State = 134; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeIdentContext : ParserRuleContext {
		public PackageIdentContext packageIdent() {
			return GetRuleContext<PackageIdentContext>(0);
		}
		public MessageIdentContext messageIdent() {
			return GetRuleContext<MessageIdentContext>(0);
		}
		public ITerminalNode TYPE() { return GetToken(Prosr1Parser.TYPE, 0); }
		public TypeIdentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeIdent; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterTypeIdent(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitTypeIdent(this);
		}
	}

	[RuleVersion(0)]
	public TypeIdentContext typeIdent() {
		TypeIdentContext _localctx = new TypeIdentContext(Context, State);
		EnterRule(_localctx, 26, RULE_typeIdent);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENT:
				{
				State = 136; packageIdent();
				State = 137; messageIdent();
				}
				break;
			case TYPE:
				{
				State = 139; Match(TYPE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QuoteContext : ParserRuleContext {
		public QuoteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_quote; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterQuote(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitQuote(this);
		}
	}

	[RuleVersion(0)]
	public QuoteContext quote() {
		QuoteContext _localctx = new QuoteContext(Context, State);
		EnterRule(_localctx, 28, RULE_quote);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142;
			_la = TokenStream.LA(1);
			if ( !(_la==T__9 || _la==T__10) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldIdentContext : ParserRuleContext {
		public ITerminalNode IDENT() { return GetToken(Prosr1Parser.IDENT, 0); }
		public FieldIdentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fieldIdent; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterFieldIdent(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitFieldIdent(this);
		}
	}

	[RuleVersion(0)]
	public FieldIdentContext fieldIdent() {
		FieldIdentContext _localctx = new FieldIdentContext(Context, State);
		EnterRule(_localctx, 30, RULE_fieldIdent);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144; Match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FullIdentContext : ParserRuleContext {
		public ITerminalNode[] IDENT() { return GetTokens(Prosr1Parser.IDENT); }
		public ITerminalNode IDENT(int i) {
			return GetToken(Prosr1Parser.IDENT, i);
		}
		public FullIdentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fullIdent; } }
		public override void EnterRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.EnterFullIdent(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IProsr1Listener typedListener = listener as IProsr1Listener;
			if (typedListener != null) typedListener.ExitFullIdent(this);
		}
	}

	[RuleVersion(0)]
	public FullIdentContext fullIdent() {
		FullIdentContext _localctx = new FullIdentContext(Context, State);
		EnterRule(_localctx, 32, RULE_fullIdent);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146; Match(IDENT);
			State = 151;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__11) {
				{
				{
				State = 147; Match(T__11);
				State = 148; Match(IDENT);
				}
				}
				State = 153;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
